--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <div class="overlay-panel overlay-left">
                     <h1>Welcome Back!</h1>
                     <p>Welcome back! We missed you. Please log in to continue where you left off.</p>
-                    <button class="ghost" id="signInbtn">Sign In</button>
+                    <button class="ghost" id="signInbtn">Sign Up</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Hello, Friend!</h1>
                     <p>Hello and welcome! We’re excited to have you here. Please sign up to create your account and
                         start exploring our services.</p>
-                    <button class="ghost" id="signUpbtn">Sign Up</button>
+                    <button class="ghost" id="signUpbtn">Sign In</button>
                 </div>
             </div>
         </div>
